--- a/src/.htaccess
+++ b/src/.htaccess
@@ -2,3 +2,4 @@ Options -Indexes
 RewriteEngine On
 
 RewriteRule ^/v1/entities$ index.php?page=entities [L,QSA]
+RewriteRule ^/v1/entities/([0-9]+)$ index.php?page=entity&entity=$1 [L,QSA]
