--- a/000-default.conf
+++ b/000-default.conf
@@ -13,7 +13,7 @@
 
   <Directory /var/www/html>
       Options Indexes FollowSymLinks MultiViews
-      AllowOverride None
+      AllowOverride all
       Order allow,deny
       allow from all
   </Directory>
