--- a/000-default.conf
+++ b/000-default.conf
@@ -12,7 +12,7 @@
 	DocumentRoot /var/www/html
 
   <Directory /var/www/html>
-      Options Indexes FollowSymLinks MultiViews
+      Options Indexes FollowSymLinks
       AllowOverride all
       Order allow,deny
       allow from all
