--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,5 +1,7 @@
 Options -Indexes
 RewriteEngine On
 
+ErrorDocument 404 /index.php
+
 RewriteRule ^/v1/entities$ index.php?page=entities [L,QSA]
 RewriteRule ^/v1/entities/([0-9]+)$ index.php?page=entity&entity=$1 [L,QSA]
