--- a/src/.htaccess
+++ b/src/.htaccess
@@ -3,5 +3,10 @@ RewriteEngine On
 
 ErrorDocument 404 /index.php?page=404
 
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteRule ^.*$ rewrite.php [L]
+</IfModule>
+
 RewriteRule ^/v1/entities$ index.php?page=entities [L,QSA]
 RewriteRule ^/v1/entities/([0-9]+)$ index.php?page=entity&entity=$1 [L,QSA]
