--- a/src/.htaccess
+++ b/src/.htaccess
@@ -7,5 +7,6 @@ ErrorDocument 404 /index.php?page=404
     RewriteRule ^/?v1/entities$ index.php?page=entities [L,QSA]
     RewriteRule ^/?v1/entities/([0-9]+)$ index.php?page=entity&entity=$1 [L,QSA]
     RewriteRule ^/?v1/authors$ index.php?page=authors [L,QSA]
+    RewriteRule ^/?v1/export$ index.php?page=export [L,QSA]
     rewriteRule ^/?$ app.html [L]
 </IfModule>
