--- a/src/.htaccess
+++ b/src/.htaccess
@@ -8,6 +8,7 @@ ErrorDocument 404 /index.php?page=404
     RewriteRule ^/?v1/entities/([0-9]+)$ index.php?page=entity&entity=$1 [L,QSA]
     RewriteRule ^/?v1/authors$ index.php?page=authors [L,QSA]
     RewriteRule ^/?v1/export$ index.php?page=export [L,QSA]
+    RewriteRule ^/?v1/user/login$ index.php?page=login [L,QSA]
     rewriteRule ^/?$ app/app.html [L]
     rewriteRule ^/?app.css?$ app/side/app.css [L]
     rewriteRule ^/?reset.css?$ app/side/reset.css [L]
