test token javascript

--- a/src/.htaccess
+++ b/src/.htaccess
@@ -6,6 +6,7 @@ ErrorDocument 404 /index.php?page=404
     RewriteEngine On
     RewriteRule ^/?v1/entities$ index.php?page=entities [L,QSA]
     RewriteRule ^/?v1/entities/([0-9]+)$ index.php?page=entity&entity=$1 [L,QSA]
+    RewriteRule ^/?v1/entities/new$ index.php?page=newEntity [L,QSA]
     RewriteRule ^/?v1/authors$ index.php?page=authors [L,QSA]
     RewriteRule ^/?v1/export$ index.php?page=export [L,QSA]
     RewriteRule ^/?v1/user/login$ index.php?page=login [L,QSA]
