--- a/src/.htaccess
+++ b/src/.htaccess
@@ -9,6 +9,11 @@ ErrorDocument 404 /index.php?page=404
     RewriteRule ^/?v1/entities/new$ index.php?page=newEntity [L,QSA]
     RewriteRule ^/?v1/authors$ index.php?page=authors [L,QSA]
     RewriteRule ^/?v1/translations/new$ index.php?page=newTranslation [L,QSA]
+    RewriteRule ^/?v1/languages$ index.php?page=languages [L,QSA]
+    RewriteRule ^/?v1/languages/([a-zA-Zα-ωΑ-Ω]+)$ index.php?page=language&name=$1 [L,QSA]
+    RewriteRule ^/?v1/languages/families$ index.php?page=languagesFamilies [L,QSA]
+    RewriteRule ^/?v1/languages/families/([a-zA-Zα-ωΑ-Ω]+)$ index.php?page=languagesFamily&name=$1 [L,QSA]
+    RewriteRule ^/?v1/languages/new$ index.php?page=newLanguage [L,QSA]
     RewriteRule ^/?v1/export$ index.php?page=export [L,QSA]
     RewriteRule ^/?v1/user/login$ index.php?page=login [L,QSA]
     rewriteRule ^/?$ app/app.html [L]
