--- a/src/.htaccess
+++ b/src/.htaccess
@@ -9,6 +9,7 @@ ErrorDocument 404 /index.php?page=404
     RewriteRule ^/?v1/entities/new$ index.php?page=newEntity [L,QSA]
     RewriteRule ^/?v1/authors$ index.php?page=authors [L,QSA]
     RewriteRule ^/?v1/translations/new$ index.php?page=newTranslation [L,QSA]
+    RewriteRule ^/?v1/URIs$ index.php?page=URIs [L,QSA]
     RewriteRule ^/?v1/languages$ index.php?page=languages [L,QSA]
     RewriteRule ^/?v1/languages/([0-9]+)$ index.php?page=language&languageId=$1 [L,QSA]
     RewriteRule ^/?v1/languages/new$ index.php?page=newLanguage [L,QSA]
