--- a/src/.htaccess
+++ b/src/.htaccess
@@ -12,6 +12,7 @@ ErrorDocument 404 /index.php?page=404
     RewriteRule ^/?v1/export$ index.php?page=export [L,QSA]
     RewriteRule ^/?v1/user/login$ index.php?page=login [L,QSA]
     rewriteRule ^/?$ app/app.html [L]
+    rewriteRule ^/?lycee$ app/lycee.html [L]
     rewriteRule ^/?align?$ app/align.html [L]
     rewriteRule ^/?app.css?$ app/side/app.css [L]
     rewriteRule ^/?reset.css?$ app/side/reset.css [L]
