--- a/src/.htaccess
+++ b/src/.htaccess
@@ -7,7 +7,7 @@ ErrorDocument 404 /index.php?page=404
     RewriteRule ^/?v1/entities$ index.php?page=entities [L,QSA]
     RewriteRule ^/?v1/entities/([0-9]+)$ index.php?page=entity&entity=$1 [L,QSA]
     RewriteRule ^/?v1/entities/new$ index.php?page=newEntity [L,QSA]
-    RewriteRule ^/?v1/entities/URI/([a-zA-Z:/-_\.]+)$ index.php?page=uriEntity&uri=$2 [L,QSA]
+    RewriteRule ^/?v1/entities/URIs/([a-zA-Z:/-_\.]+)$ index.php?page=uriEntity&uri=$1 [L,QSA]
     RewriteRule ^/?v1/authors$ index.php?page=authors [L,QSA]
     RewriteRule ^/?v1/translations/new$ index.php?page=newTranslation [L,QSA]
     RewriteRule ^/?v1/URIs$ index.php?page=URIs [L,QSA]
