--- a/src/.htaccess
+++ b/src/.htaccess
@@ -4,27 +4,37 @@ ErrorDocument 404 /index.php?page=404
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
+
+
     RewriteRule ^/?v1/entities$ index.php?page=entities [L,QSA]
     RewriteRule ^/?v1/entities/([0-9]+)$ index.php?page=entity&entity=$1 [L,QSA]
-    RewriteRule ^/?v1/entities/new$ index.php?page=newEntity [L,QSA]
-    RewriteRule ^/?v1/entities/URIs/([a-zA-Z:/-_\.]+)$ index.php?page=uriEntity&uri=$1 [L,QSA]
+    RewriteRule ^/?v1/entities/URIs/(.+)$ index.php?page=uriEntity&uri=$1 [L,QSA]
     RewriteRule ^/?v1/authors$ index.php?page=authors [L,QSA]
-    RewriteRule ^/?v1/translations/new$ index.php?page=newTranslation [L,QSA]
     RewriteRule ^/?v1/URIs$ index.php?page=URIs [L,QSA]
-    RewriteRule ^/?v1/URIs/addURId$ index.php?page=addURId [L,QSA]
     RewriteRule ^/?v1/languages$ index.php?page=languages [L,QSA]
     RewriteRule ^/?v1/languages/([0-9]+)$ index.php?page=language&languageId=$1 [L,QSA]
-    RewriteRule ^/?v1/languages/new$ index.php?page=newLanguage [L,QSA]
     RewriteRule ^/?v1/languages/families$ index.php?page=languagesFamilies [L,QSA]
     RewriteRule ^/?v1/languages/families/([a-zA-Zα-ωΑ-Ω]+)$ index.php?page=languagesFamily&name=$1 [L,QSA]
-    RewriteRule ^/?v1/languages/new$ index.php?page=newLanguage [L,QSA]
     RewriteRule ^/?v1/export$ index.php?page=export [L,QSA]
+
+
     RewriteRule ^/?v1/user/login$ index.php?page=login [L,QSA]
+    RewriteRule ^/?v1/entities/new$ index.php?page=newEntity [L,QSA]
+    RewriteRule ^/?v1/translations/new$ index.php?page=newTranslation [L,QSA]
+    RewriteRule ^/?v1/languages/new$ index.php?page=newLanguage [L,QSA]
+    RewriteRule ^/?v1/URIs/addURId$ index.php?page=addURId [L,QSA]
+
+
     rewriteRule ^/?$ app/app.html [L]
-    rewriteRule ^/?lycee$ app/lycee.html [L]
-    rewriteRule ^/?align?$ app/align.html [L]
     rewriteRule ^/?favicon.ico?$ app/side/favicon.ico [L]
     rewriteRule ^/?app.css?$ app/side/app.css [L]
     rewriteRule ^/?reset.css?$ app/side/reset.css [L]
     rewriteRule ^/?app.js?$ app/side/app.js [L]
+
+
+
+    rewriteRule ^/?lycee$ lycee/lycee.html [L]
+
+    rewriteRule ^/?align?$ app/align.html [L]
+
 </IfModule>
