--- a/src/.htaccess
+++ b/src/.htaccess
@@ -33,8 +33,8 @@ ErrorDocument 404 /index.php?page=404
 
 
 
-    rewriteRule ^/?lycee$ lycee/lycee.html [L]
+    rewriteRule ^/?lycee/?$ lycee/lycee.html [L]
 
-    rewriteRule ^/?align?$ app/align.html [L]
+    rewriteRule ^/?align/?$ app/align.html [L]
 
 </IfModule>
