--- a/src/.htaccess
+++ b/src/.htaccess
@@ -19,7 +19,7 @@ ErrorDocument 404 /index.php?page=404
 
 
     RewriteRule ^/?v1/user/login$ index.php?page=login [L,QSA]
-    RewriteRule ^/?v1/entities/new$ index.php?page=newEntity [L,QSA]
+    RewriteRule ^/?v1/entities/new/?$ index.php?page=newEntity [L,QSA]
     RewriteRule ^/?v1/translations/new$ index.php?page=newTranslation [L,QSA]
     RewriteRule ^/?v1/languages/new$ index.php?page=newLanguage [L,QSA]
     RewriteRule ^/?v1/URIs/addURId$ index.php?page=addURId [L,QSA]
