--- a/src/.htaccess
+++ b/src/.htaccess
@@ -20,6 +20,7 @@ ErrorDocument 404 /index.php?page=404
 
 
     RewriteRule ^/?v1/user/login$ index.php?page=login [L,QSA]
+    RewriteRule ^/?v1/user/register$ index.php?page=register [L,QSA]
     RewriteRule ^/?v1/entities/new/?$ index.php?page=newEntity [L,QSA]
     RewriteRule ^/?v1/translations/new$ index.php?page=newTranslation [L,QSA]
     RewriteRule ^/?v1/languages/new$ index.php?page=newLanguage [L,QSA]
@@ -37,7 +38,6 @@ ErrorDocument 404 /index.php?page=404
 
 
     rewriteRule ^/?lycee/?$ lycee/lycee.html [L]
-
     rewriteRule ^/?align/?$ app/align.html [L]
 
 </IfModule>
