--- a/src/.htaccess
+++ b/src/.htaccess
@@ -15,7 +15,7 @@ ErrorDocument 404 /index.php?page=404
     RewriteRule ^/?v1/languages/([0-9]+)$ index.php?page=language&languageId=$1 [L,QSA]
     RewriteRule ^/?v1/languages/families$ index.php?page=languagesFamilies [L,QSA]
     RewriteRule ^/?v1/languages/families/([a-zA-Zα-ωΑ-Ω]+)$ index.php?page=languagesFamily&name=$1 [L,QSA]
-    RewriteRule ^/?v1/translation/([0-9]+)/([0-9]+)$ index.php?page=alignTranslations&id=$1&id2=$2 [L,QSA]
+    RewriteRule ^/?v1/align/([0-9]+)/([0-9]+)$ index.php?page=alignTranslations&id=$1&id2=$2 [L,QSA]
     RewriteRule ^/?v1/export$ index.php?page=export [L,QSA]
 
 
