--- a/src/.htaccess
+++ b/src/.htaccess
@@ -28,6 +28,7 @@ ErrorDocument 404 /index.php?page=404
     RewriteRule ^/?v1/URIs/addURId$ index.php?page=addURId [L,QSA]
     RewriteRule ^/?v1/align$ index.php?page=updateAlign [L,QSA]
     RewriteRule ^/?v1/scholie/new$ index.php?page=newScholie [L,QSA]
+    RewriteRule ^/?v1/text/new$ index.php?page=newText [L,QSA]
 
 
     rewriteRule ^/?$ app/app.html [L]
