--- a/src/.htaccess
+++ b/src/.htaccess
@@ -31,6 +31,7 @@ ErrorDocument 404 /index.php?page=404
     RewriteRule ^/?v1/scholie/new$ index.php?page=newScholie [L,QSA]
     RewriteRule ^/?v1/text/new$ index.php?page=newText [L,QSA]
     RewriteRule ^/?v1/reference/new$ index.php?page=newRef [L,QSA]
+    RewriteRule ^/?v1/keywords/assoc$ index.php?page=assocKeyword [L,QSA]
 
 
     rewriteRule ^/?$ app/app.html [L]
