--- a/src/.htaccess
+++ b/src/.htaccess
@@ -17,6 +17,7 @@ ErrorDocument 404 /index.php?page=404
     RewriteRule ^/?v1/languages/families/([a-zA-Zα-ωΑ-Ω]+)$ index.php?page=languagesFamily&name=$1 [L,QSA]
     RewriteRule ^/?v1/align/([0-9]+)/([0-9]+)$ index.php?page=alignTranslations&id=$1&id2=$2 [L,QSA]
     RewriteRule ^/?v1/keywords$ index.php?page=getKeywords [L,QSA]
+    RewriteRule ^/?v1/keywords/families$ index.php?page=getKeywordsFamilies [L,QSA]
     RewriteRule ^/?v1/export$ index.php?page=export [L,QSA]
 
 
